desktop fix for low-height screens

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
   <div class="hk-screen hk-milestones section">
     <div class="hk-central_block">
       <div class="not-relative">
-        <h2>Milestones</h2>
+        <h2 class="hk-tablet">Milestones</h2>
         <div>
           <div class="hk-tablet">
             <h4>1. Minimum milestone</h4>
@@ -449,6 +449,7 @@
             </p>
           </div>
           <div class="absolute-center hk-desktop">
+            <h2>Milestones</h2>
             <div class="hk-milestones-block_headers">
               <div class="hk-milestones-block_header-1">
                 <h4>1. Minimum milestone</h4>
@@ -480,38 +481,38 @@
               <div class="hk-milestones-block hk-block-1">
                 <p>
                   <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
-                  <span class="mil-right"><br /><br /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-right"><br /><br class="none_on_short" /><span class="hk-bolder">85</span><span class="hk-bold">%</span> - HackenProof platform</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-2">
                 <p>
                   <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
-                  <span class="mil-left"><br /><br /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform</span>
-                  <span class="mil-right"><br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+                  <span class="mil-left"><br /><br class="none_on_short" /><span class="hk-bolder">60</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-right"><br /><br class="none_on_short" /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-3">
                 <p>
                   <span class="mil-left"><span class="hk-bolder">15</span><span class="hk-bold">%</span> - HackIT conference</span>
-                  <span class="mil-left"><br /><br /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform</span>
-                  <span class="mil-right"><br /><br /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+                  <span class="mil-left"><br /><br class="none_on_short" /><span class="hk-bolder">40</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-right"><br /><br class="none_on_short" /><span class="hk-bolder">45</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-4">
                 <p>
                   <span class="mil-left"><span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference</span>
-                  <span class="mil-right"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform</span>
-                  <span class="mil-left"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
-                  <span class="mil-right"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
+                  <span class="mil-right"><br /><br class="none_on_short" /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-left"><br /><br class="none_on_short" /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+                  <span class="mil-right"><br /><br class="none_on_short" /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
                 </p>
               </div>
               <div class="hk-milestones-block hk-block-5">
                 <p>
                   <span class="mil-left"><span class="hk-bolder">10</span><span class="hk-bold">%</span> - HackIT conference</span>
-                  <span class="mil-left"><br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform</span>
-                  <span class="mil-right"><br /><br /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
-                  <span class="mil-right"><br /><br /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
-                  <span class="mil-left"><br /><br /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity analytics center</span>
+                  <span class="mil-left"><br /><br class="none_on_short" /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - HackenProof platform</span>
+                  <span class="mil-right"><br /><br class="none_on_short" /><span class="hk-bolder">25</span><span class="hk-bold">%</span> - Cybersecurity products acceleration and incubation</span>
+                  <span class="mil-right"><br /><br class="none_on_short" /><span class="hk-bolder">30</span><span class="hk-bold">%</span> - Unreported zero-day remuneration platform</span>
+                  <span class="mil-left"><br /><br class="none_on_short" /><span class="hk-bolder">10</span><span class="hk-bold">%</span> - CyberSecurity analytics center</span>
                 </p>
               </div>
             </div>
