--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       </div>
       <div class="hk-amount">
         <span class="hk-amount-header">Amount of money raised</span>
-        <span class="hk-amount-number">295 000</span>
+        <span class="hk-amount-number">$295 000</span>
       </div>
 
     </div>
@@ -536,7 +536,7 @@
   <div class="hk-screen hk-burning section">
     <div class="hk-central_block">
       <div>
-        <h2 class="">Burning Haken model</h2>
+        <h2 class="">Burning Hacken model</h2>
         <hr />
         <p class="hk-burning-quote_text">
           Instead of profit-sharing or buy-back scheme, Hacken uses revolutionary burning model which makes it less volatile, ensures constant demand and controllable price of the services within our Ecosystem.        </p>
@@ -917,28 +917,44 @@
               <div id="swiper-container-partners" class="swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-1.png" alt="">
+                    <img src="./src/img/logo-1.png" alt=""
+                    onclick="window.open('https://axon.partners/uk/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-2.png" alt="">
+                    <img src="./src/img/logo-2.png" alt=""
+                    onclick="window.open('https://hackit-ukraine.com/en/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-3.png" alt="">
+                    <img src="./src/img/logo-3.png" alt=""
+                    onclick="window.open('https://www.ambisafe.co', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-4.png" alt="">
+                    <img src="./src/img/logo-4.png" alt=""
+                    onclick="window.open('https://protectmaster.org/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-5.png" alt="">
+                    <img src="./src/img/logo-5.png" alt=""
+                    onclick="window.open('http://smart-techno.com.ua/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-6.png" alt="">
+                    <img src="./src/img/logo-6.png" alt=""
+                    onclick="window.open('http://hoshvadgtl.com/', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-7.png" alt="">
+                    <img src="./src/img/logo-7.png" alt=""
+                    onclick="window.open('https://ukrinnovate.com/en', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                   <div class="swiper-slide">
-                    <img src="./src/img/logo-8.png" alt="">
+                    <img src="./src/img/logo-8.png" alt=""
+                    onclick="window.open('https://magicfactoryevent.com', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');"
+                    >
                   </div>
                 </div>
               </div>
