--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
     <div class="hk-timer">
       <div class="hk-time">
-        <span class="hk-time-header">Coin Sale Countdown</span>
+        <span class="hk-time-header">Presale Countdown</span>
 
         <div class="hk-bonus_timer-time__main">
 
