the same that Kotuhan did, but in another way

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
   <div class="hk-screen hk-burning section">
     <div class="hk-central_block">
       <div>
-        <h2 class="">Burning Haken model</h2>
+        <h2 class="">Burning Hacken model</h2>
         <hr />
         <p class="hk-burning-quote_text">
           Instead of profit-sharing or buy-back scheme, Hacken uses revolutionary burning model which makes it less volatile, ensures constant demand and controllable price of the services within our Ecosystem.        </p>
